bak/kub_yml/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: hello-spring
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mook3/test:hello-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 5005
              name: debug
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hello-spring
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: backend
